Identação e optimização de imports